logs/segis_net_error_176385.err
Using TensorFlow backend.
/home/groups/dlmrimnd/jacob/miniconda3/envs/segisnet_env/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6
  return f(*args, **kwds)
Traceback (most recent call last):
  File "/home/groups/dlmrimnd/jacob/projects/Segis-Net/code/Segis-Net/Train_SegisNet.py", line 29, in <module>
    from SegisNet_model_dataGenerator import joint_model, DataGenerator
  File "/home/groups/dlmrimnd/jacob/projects/Segis-Net/code/Segis-Net/SegisNet_model_dataGenerator.py", line 26, in <module>
    from SegNet_model_segGener import seg_net
  File "/home/groups/dlmrimnd/jacob/projects/Segis-Net/code/Segis-Net/SegNet_model_segGener.py", line 58
    tensors = Input(shape=(*img_xyz), name='tensor_input')
                          ^
SyntaxError: can't use starred expression here
